force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/tc9_pr__Pay_Transaction_Distribution__c.object-meta.xml
<CustomObject>
    <description>General Ledger distribution of Pay Transactions</description>
    <label>Pay Transaction Distribution</label>
    <nameField>
        <displayFormat>PTD-{0000000000}</displayFormat>
        <label>Pay Transaction Distribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Transaction Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>