force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_bgl__Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Cost_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_bgl__Acc_Segments__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Cost Code</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_bgl__Acc_Segments__c</referenceTo>
    <relationshipLabel>Pay Transaction Distributions</relationshipLabel>
    <relationshipName>Cost_Codes1</relationshipName>
    <type>Lookup</type>
</CustomField>