force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_bgl__Payee_Leave_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Payee_Leave_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee Leave Rule</label>
    <referenceTo>tc9_pr__Payee_Leave_Rule__c</referenceTo>
    <relationshipLabel>Pay Transaction Distributions</relationshipLabel>
    <relationshipName>Pay_Transaction_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>