force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Assignment</description>
    <inlineHelpText>The related Assignment</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Pay Transaction Distributions</relationshipLabel>
    <relationshipName>Pay_Transaction_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>