force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__AU_Payroll_Oncosts__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Payroll_Oncosts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AU Payroll Oncosts</label>
    <referenceTo>tc9_pr__Pay_Transaction_Distribution__c</referenceTo>
    <relationshipLabel>Pay Transaction Distributions</relationshipLabel>
    <relationshipName>Pay_Transaction_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>