force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__Custom_Emp_Cost_Item__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Custom_Emp_Cost_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Employment Cost Item record selected for the calculation of this Custom Cost</description>
    <inlineHelpText>The Employment Cost Item record selected for the calculation of this Custom Cost</inlineHelpText>
    <label>Custom Emp Cost Item</label>
    <referenceTo>tc9_pr__Employment_Cost_Item__c</referenceTo>
    <relationshipLabel>Pay Transaction Distributions (Custom Emp Cost Item)</relationshipLabel>
    <relationshipName>Pay_Transaction_Distributions2</relationshipName>
    <type>Lookup</type>
</CustomField>