force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__Distribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Distribution_Amount__c</fullName>
    <description>The fixed amount distribution of the original Pay Transaction value</description>
    <inlineHelpText>The fixed amount distribution of the original Pay Transaction value</inlineHelpText>
    <label>Distribution Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>