force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__Distribution_Percentage__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Distribution_Percentage__c</fullName>
    <description>The percentage split of the original Pay Transaction value</description>
    <inlineHelpText>The percentage split of the original Pay Transaction value</inlineHelpText>
    <label>Distribution Percentage</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>