force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__Leave_Liability_Value__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Liability_Value__c</fullName>
    <description>The allocated value of Leave Liability based on the nominated distribution in this record</description>
    <formula>If ( RecordType.DeveloperName = &apos;Leave_Accrual&apos; , If ( AND ( tc9_pr__Distribution_Amount__c &lt;&gt; 0 , NOT ( ISBLANK ( tc9_pr__Distribution_Amount__c ) ) ) , tc9_pr__Distribution_Amount__c ,  Round ( tc9_pr__Pay_Transaction__r.tc9_pr__Leave_Liability_Total__c * tc9_pr__Distribution_Percentage__c , 2 ) ) , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The allocated value of Leave Liability based on the nominated distribution in this record</inlineHelpText>
    <label>Leave Liability Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>