force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__Pay_Transaction__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Pay Transaction</description>
    <inlineHelpText>The related Pay Transaction</inlineHelpText>
    <label>Pay Transaction</label>
    <referenceTo>tc9_pr__Pay_Transaction__c</referenceTo>
    <relationshipLabel>Pay Transaction Distributions</relationshipLabel>
    <relationshipName>Pay_Transaction_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>