force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__Payee_Pay_Batch__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee_Pay_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Payee Pay Batch</description>
    <inlineHelpText>The related Payee Pay Batch</inlineHelpText>
    <label>Payee Pay Batch</label>
    <referenceTo>tc9_pr__Pay_Batch_Item__c</referenceTo>
    <relationshipLabel>Pay Transaction Distributions</relationshipLabel>
    <relationshipName>Pay_Transaction_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>