force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__Payroll_Tax_Assignment_Cost__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Tax_Assignment_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Assignment Cost record selected for the calculation of Payroll Tax</description>
    <inlineHelpText>The Assignment Cost record selected for the calculation of Payroll Tax</inlineHelpText>
    <label>Payroll Tax Assignment Cost</label>
    <referenceTo>tc9_pr__Assignment_Cost__c</referenceTo>
    <relationshipLabel>Pay Transaction Distributions</relationshipLabel>
    <relationshipName>Pay_Transaction_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>