force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__Payroll_Tax_Emp_Cost_Item__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Tax_Emp_Cost_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Employment Cost Item record selected for the calculation of Payroll Tax</description>
    <inlineHelpText>The Employment Cost Item record selected for the calculation of Payroll Tax</inlineHelpText>
    <label>Payroll Tax Emp Cost Item</label>
    <referenceTo>tc9_pr__Employment_Cost_Item__c</referenceTo>
    <relationshipLabel>Pay Transaction Distributions</relationshipLabel>
    <relationshipName>Pay_Transaction_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>