force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__Payroll_Tax_Total__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Tax_Total__c</fullName>
    <formula>tc9_pr__Payroll_Tax_on_Earnings__c + tc9_pr__Payroll_Tax_on_Super__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payroll Tax</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>