force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__Superannuation_Value__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Value__c</fullName>
    <description>The allocated value of Superannuation based on the nominated distribution in this record</description>
    <formula>If ( RecordType.DeveloperName = &apos;Withholding_Superannuation&apos; , If ( AND ( tc9_pr__Distribution_Amount__c &lt;&gt; 0 , NOT ( ISBLANK ( tc9_pr__Distribution_Amount__c ) ) ) , tc9_pr__Distribution_Amount__c , ROUND ( ( tc9_pr__Pay_Transaction__r.tc9_pr__Superannuation_Guarantee__c + tc9_pr__Pay_Transaction__r.tc9_pr__Superannuation_Employer_Additional__c ) * tc9_pr__Distribution_Percentage__c , 2 ) ) , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The allocated value of Superannuation based on the nominated distribution in this record</inlineHelpText>
    <label>Superannuation Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>