force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__WorkCover_Emp_Cost_Item__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__WorkCover_Emp_Cost_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Employment Cost Item record selected for the calculation of WorkCover</description>
    <inlineHelpText>The Employment Cost Item record selected for the calculation of WorkCover</inlineHelpText>
    <label>WorkCover Emp Cost Item</label>
    <referenceTo>tc9_pr__Employment_Cost_Item__c</referenceTo>
    <relationshipLabel>Pay Transaction Distributions (WorkCover Emp Cost Item)</relationshipLabel>
    <relationshipName>Pay_Transaction_Distributions1</relationshipName>
    <type>Lookup</type>
</CustomField>