force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__WorkCover_on_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__WorkCover_on_Earnings__c</fullName>
    <formula>if( tc9_pr__Pay_Transaction__r.tc9_pr__Pay_Code__r.tc9_pr__WorkCover_Reportable__c = True,
(tc9_pr__WorkCover_Rate__c * tc9_pr__Pay_Transaction__r.tc9_pr__Pay_Total__c)/100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkCover on Earnings</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>