force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__WorkCover_on_Super__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__WorkCover_on_Super__c</fullName>
    <formula>if(tc9_pr__Pay_Transaction__r.tc9_pr__Pay_Code__r.tc9_pr__WorkCover_Reportable__c = True &amp;&amp; tc9_pr__Assignment__r.tc9_pr__Location__r.tc9_pr__Workcover_on_Super_Exempt__c = False,
(tc9_pr__WorkCover_Rate__c * tc9_pr__AU_Payroll_Oncosts__r.tc9_pr__Superannuation_Value__c)/100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkCover on Super</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>