force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__WorkCover_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__WorkCover_Rate__c</fullName>
    <description>The WorkCover rate applied</description>
    <inlineHelpText>The WorkCover rate applied</inlineHelpText>
    <label>WorkCover Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>