force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/fields/tc9_pr__WorkCover_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__WorkCover_Total_Cost__c</fullName>
    <description>The total cost of WorkCover for the selected Pay Transaction</description>
    <inlineHelpText>The total cost of WorkCover for the selected Pay Transaction</inlineHelpText>
    <label>WorkCover Total Cost</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>