force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/recordTypes/tc9_pr__AU_Payroll_Costs.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__AU_Payroll_Costs</fullName>
    <active>true</active>
    <label>AU Payroll Costs</label>
</RecordType>