force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/recordTypes/tc9_pr__Custom_Cost_1.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Custom_Cost_1</fullName>
    <active>true</active>
    <label>Custom Cost 1</label>
</RecordType>