force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/recordTypes/tc9_pr__Custom_Cost_2.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Custom_Cost_2</fullName>
    <active>true</active>
    <label>Custom Cost 2</label>
</RecordType>