force-app/main/default/objects/tc9_pr__Pay_Transaction_Distribution__c/recordTypes/tc9_pr__Withholding_Superannuation.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Withholding_Superannuation</fullName>
    <active>true</active>
    <label>Withholding - Superannuation</label>
</RecordType>